# lightning

./: .containerignore  .gitignore  CLAUDE.md  Makefile.in  Readme.md  configure  install  pytest.ini
.github/workflows/: test.yml
.rpk/: package  versions
.rpk/depends/: account  bash  config  crypt  git  jq  openssl  python3  rpk  secret  sqlite3  stow
.rpk/skills/: lightning-developer.md  lightning-operator.md  lightning-wallet.md
docs/: lightning.md
docs/templates/: CLAUDE.md.lightning
etc/bash_completion.d/: lightning
issues/: MILESTONE-0.2.0.md  MILESTONE-0.3.0.md  MILESTONE-0.4.0.md  MILESTONE-0.5.0.md  MILESTONE-0.6.0.md  MILESTONE-0.7.0.md  MILESTONE-0.8.0.md  MILESTONE-1.0.0.md  MILESTONE-1.1.0.md  MILESTONE-1.2.0.md  MILESTONE-1.3.0.md  MILESTONE-1.4.0.md  MILESTONE-1.5.0.md  MILESTONE-1.6.0.md
issues/feature/: 170-lightning-foundation-prep.md  171-lightning-multi-backend.md  172-lightning-channel-management.md  173-lightning-payments-invoices-lnurl.md  174-lightning-wallet-git-multi-account.md  175-lightning-liquidity.md  176-lightning-addresses.md  177-lightning-self-contained-package.md  178-vendor-lightning-standards.md  179-lightning-man-page.md  180-lightning-wallet-agent-skill.md  181-lightning-walkthrough.md  182-lightning-sit-tests.md  183-lightning-daemon-management.md  184-lightning-secrets-unlock.md  185-lightning-seed-backup-recovery.md  186-lightning-watchtowers.md  188-lightning-fee-forwarding.md  189-lightning-tor-privacy.md  190-lightning-cluster-integration.md  191-lightning-ci-workflow.md  192-lightning-qr-codes.md  193-lightning-accounting-tsv.md  195-lightning-bank-mode.md  196-lightning-wellknown-api.md  198-lsps1-inbound-liquidity.md  199-peer-keepalive.md  204-lightning-alert-verb.md  205-channel-autopilot-verb.md  206-peer-score-verb.md  208-wyrd-p2p-liquidity-clan.md  209-baweepay-self-hosted-wallet.md  209-lightning-wallet-pwa.md  210-nostr-liquidity-discovery.md  212-account-centric-http-api.md  213-operator-fee-skim.md  214-fee-revenue-dashboard.md  215-fee-autotuning-cron.md  216-interest-mode.md  217-autopilot-paytarget-intel.md  (+23 more)
issues/feature/done/: 170-lightning-foundation-prep.md  171-lightning-multi-backend.md  172-lightning-channel-management.md  173-lightning-payments-invoices-lnurl.md  174-lightning-wallet-git-multi-account.md  175-lightning-liquidity.md  176-lightning-addresses.md  177-lightning-self-contained-package.md  178-vendor-lightning-standards.md  179-lightning-man-page.md  180-lightning-wallet-agent-skill.md  181-lightning-walkthrough.md  182-lightning-sit-tests.md  183-lightning-daemon-management.md  184-lightning-secrets-unlock.md  185-lightning-seed-backup-recovery.md  186-lightning-watchtowers.md  187-lightning-backup-restore.md  188-lightning-fee-forwarding.md  189-lightning-tor-privacy.md  191-lightning-ci-workflow.md  192-lightning-qr-codes.md  193-lightning-accounting-tsv.md  195-lightning-bank-mode.md  196-lightning-wellknown-api.md  197-lightning-plugin-verb.md  198-lsps1-inbound-liquidity.md  200-lightning-fee-verb.md  201-lightning-rebalance-verb.md  202-personal-node-guide.md  203-routing-node-guide.md  205-channel-autopilot-verb.md  206-peer-score-verb.md  207-clightning-install.md  208-wyrd-p2p-liquidity-clan.md  (+28 more)
libexec/lightning/: _backup  _channels  _compliance  _fee  _fee-policy  _history  _info  _node_id  _offer  _offer-pay  _pay  _peers  _plugin  _seed  _send  _session-token  _tower  _unlock  _webauthn-verify  account  address  alert  api-account-apikey  api-account-balance  api-account-charge  api-account-close  api-account-describe  api-account-history  api-account-history-note  api-account-invite-codes  api-account-invoice  api-account-invoice-get  api-account-list  api-account-mandate  api-account-mandate-pull  api-account-pay  api-account-recv  api-account-recv-reusable  api-account-referrals  api-account-standing-order  (+2404 more)
share/lightning/: bootstrap-nodes.txt  schema.sql
skills/lightning-wallet/: SKILL.md
tests/python/: conftest.py  test_api_accounts.py  test_balance.py  test_channels.py  test_handler.py  test_health.py  test_mcp.py  test_node.py  test_price.py  test_recv.py  test_send.py  test_users.py  test_version_gate.py
tests/sit/: README.md  helpers.bash  thunderd-live.sh
tests/unit/: lightning.bats  thunderd.bats
thunder/: .containerignore  Cargo.toml  README.md  STATUS.md
thunder/crates/signer-core/: Cargo.toml
thunder/crates/signer-core/src/: lib.rs
thunderd/: Cargo.toml  README.md  STATUS.md  rust-toolchain.toml
thunderd/crates/thunder/: Cargo.toml
thunderd/crates/thunderd/: Cargo.toml
thunderd/crates/thunderd-cli/: Cargo.toml
thunderd/crates/thunderd-cli/src/: main.rs
thunderd/crates/thunderd/migrations/: 0001_init.sql  0002_system_accounts.sql  0003_commerce_invoices.sql  0004_mandates_pulls.sql  0006_commerce_charges.sql  0007_standing_orders.sql  0009_referrals.sql  0010_noncustodial.sql
thunderd/crates/thunderd/src/: accounts.rs  auth.rs  charges.rs  clnrpc.rs  compliance.rs  config.rs  db.rs  error.rs  invoices.rs  ledger.rs  logging.rs  main.rs  mandates.rs  migrate.rs  noncustodial.rs  onchain.rs  passkey.rs  policy.rs  ratelimit.rs  referrals.rs  standing_orders.rs  state.rs
thunderd/crates/thunderd/src/http/: mod.rs
thunderd/docs/: API.md
thunderd/scripts/: carve-out-guard.sh
(+2499 files in other folders)
