[package]
name = "thunder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "thunder — the user's remote-signer client CLI for thunderd (non-custodial tier)"

[[bin]]
name = "thunder"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
signer-core = { path = "../signer-core" }
