[package]
name = "thunderd-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Operator admin CLI for thunderd (health, tenants, accounts, …)"

[[bin]]
name = "thunderd-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
