[package]
name = "thunderd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Lightning accounts companion daemon (custodial + non-custodial), companion to lightningd"

[[bin]]
name = "thunderd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
sha2.workspace = true
subtle.workspace = true
hex.workspace = true

axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
# SQLite via sqlx (DECISION: sqlx over rusqlite — async-native fits the
# tokio/axum server with no spawn_blocking; runtime-checked queries keep
# the build free of a compile-time DATABASE_URL / offline cache, which
# keeps CI + the FEAT-302 carve-out guard simple). The DB layer is
# isolated to src/db.rs, so swapping engines later is contained.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
] }
# Passkey / WebAuthn identity (auth folded into thunderd). Needs system
# OpenSSL at build time (provided in CI).
webauthn-rs = "0.5"
# On-chain wallet primitives (xpub derivation + PSBT construction) for the
# non-custodial tier. Pure construction — broadcast/chain-scan need a node.
bitcoin = { version = "0.32", features = ["base64"] }

[dev-dependencies]
# End-to-end A2 proof: daemon builds the PSBT, the device signer signs it.
signer-core = { path = "../signer-core" }
